# python-school-fastapi-demo

./: .gitignore  alembic.ini  pyproject.toml  settings.toml
alembic/: env.py
alembic/versions/: 2021_09_02_19_46_32_create_accounts_table_66ecbd93ed56.py  2021_09_02_19_50_03_add_first_name_last_name_and_avatar__8083cbf692db.py  2021_09_13_19_47_40_add_table_refresh_tokens_69f8cabf900d.py
src/demo/: __main__.py  app.py  config.py  database.py  exceptions.py
src/demo/accounts/: api.py  models.py  schemas.py  services.py
src/demo/auth/: __init__.py  api.py  dependencies.py  models.py  schemas.py  services.py
tests/: conftest.py  database.py
tests/demo/: test_app.py
